8293007: riscv: optimize nmethod entry barrier